# email-microservice

./: exceptions.py  main.py  pyproject.toml
