[tool.poetry]
name = "email-microservice"
version = "0.1.0"
description = ""
authors = ["Kirill Inyakin <kirillinyakin@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
nats-py = "^2.0.0-rc.3"
ujson = "^4.3.0"
sendgrid = "^6.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
